# ps_snippets

./: .gitignore  Cargo.toml  book.toml  crates.js  equip.nu  go.bat  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: doc.yml  rustdoc.yaml
TODO_remove/src/algo/: binary_search.rs  div_floors.rs  gcd.rs  hello_world.rs  mod.rs  modint.rs
TODO_remove/src/test/: gcd_test.rs  modint_test.rs
cargo-oj/: README.md
cargo-oj/src/: algo.rs
cargo-oj/src/algo/: hello_world.rs  io.rs
code/src/: lib.rs  main.rs  template.rs
code/src/algo/: io.rs  mod.rs  modint.rs  prime_sqrt.rs
code/src/test/: binary_search_test.rs  div_floors_test.rs  hello_world_test.rs  mod.rs  prime_sqrt_test.rs
crates/_template/: Cargo.toml
crates/_template/src/: lib.rs
crates/ds/disjoint_set/: Cargo.toml
crates/ds/fenwick/: Cargo.toml
crates/ds/lazy_segtree/: Cargo.toml
crates/ds/lazy_segtree_dyn/: Cargo.toml
crates/geom_simple/polygon_simple/: Cargo.toml
crates/graph/bfs/: Cargo.toml
crates/graph/bicolor/: Cargo.toml
crates/graph/bottleneck_hungarian/: Cargo.toml
crates/graph/dijkstra/: Cargo.toml
crates/graph/edge_list/: Cargo.toml
crates/graph/edge_list/src/: lib.rs
crates/graph/hungarian/: Cargo.toml
crates/graph/scc/: Cargo.toml
crates/graph/toposort/: Cargo.toml
crates/io/: Cargo.toml  LICENSE
crates/io/io/src/: lib.rs
crates/io/io_short/: Cargo.toml
crates/io/io_short/src/: lib.rs
crates/io/src/: lib.rs
crates/math/enum_comb/: Cargo.toml
crates/math/gcd/: Cargo.toml
crates/math/kth_root/: Cargo.toml
crates/math/kth_root/src/: lib.rs
crates/math/modpow/: Cargo.toml
crates/math/sieve/: Cargo.toml
crates/misc/binary_search/: Cargo.toml
crates/misc/bit_helper/: Cargo.toml
crates/misc/calendar/: Cargo.toml
crates/misc/dnc_opt/: Cargo.toml
crates/misc/gadgets/: Cargo.toml
crates/misc/lis/: Cargo.toml
crates/misc/two_sat/: Cargo.toml
crates/misc/two_sat/src/: lib.rs
crates/number/dyadic/: Cargo.toml
crates/number/fraction/: Cargo.toml
crates/number/modfact/: Cargo.toml
crates/number/modint/: Cargo.toml
crates/number/ord_f64/: Cargo.toml
crates/number/ord_f64/src/: lib.rs
crates/number/ubigint/: Cargo.toml
crates/prime/factorization/: Cargo.toml
crates/prime/primality/: Cargo.toml
crates/string/ascii/: Cargo.toml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
ps_snippets/: all.html  index.html  sidebar-items.js
ps_snippets/ds/: index.html  sidebar-items.js
ps_snippets/ds/merge_sort_tree/: index.html  sidebar-items.js
ps_snippets/ds/queue_min/: index.html  sidebar-items.js
ps_snippets/ds/range_sum/: index.html  sidebar-items.js
ps_snippets/ds/segtree_lazy/: index.html  sidebar-items.js
ps_snippets/geometry/: index.html  sidebar-items.js
ps_snippets/geometry/pnt/: index.html  sidebar-items.js
ps_snippets/graph/: index.html  sidebar-items.js
ps_snippets/graph/degree_ordered_graph/: index.html  sidebar-items.js
ps_snippets/graph/dinic/: index.html  sidebar-items.js
ps_snippets/graph/mcmf/: index.html  sidebar-items.js
ps_snippets/io/: index.html  sidebar-items.js
ps_snippets/io/oj_default/: index.html  sidebar-items.js
ps_snippets/math/: index.html  sidebar-items.js
ps_snippets/math/barrett/: index.html  sidebar-items.js
ps_snippets/math/div_floors/: index.html  sidebar-items.js
ps_snippets/math/gcd/: index.html  sidebar-items.js
ps_snippets/matrix/: index.html  sidebar-items.js
ps_snippets/matrix/char_poly/: index.html  sidebar-items.js
ps_snippets/matrix/gauss_elim/: index.html  sidebar-items.js
ps_snippets/prime/: index.html
ps_snippets/rand/: index.html
ps_snippets/slow/: fn.divisors.html  index.html  sidebar-items.js
ps_snippets/string/: index.html  sidebar-items.js
src/: README.md  SUMMARY.md  __lib.rs  lib.rs  template.rs  template_gcj.rs
src/basic/: README.md  ascii.rs  cheatsheet.md  io.md  mod.rs  std.md
src/ds/: README.md  README_range.md  bitset.rs  disjoint_set.md  dynamic_segtree.rs  fenwick.rs  lazy_segtree.rs  merge_sort_tree.rs  mod.rs  queue_min.rs  range_sum.rs  rect_sum.rs  segtree_beats.rs  segtree_lazy.rs  sparse_fenwick.rs  static_search.md
src/geometry/: README.md  mod.rs  pnt.rs  polar_sort.rs  rectangle_union.rs
src/graph/: README.md  adj.md  bellman_ford.rs  bfs.md  connected_components.rs  degree_ordered_graph.rs  degree_sequence.rs  dense_mst.rs  dijkstra.rs  dinic.rs  disjoint_set.rs  mcmf.rs  mod.rs  repr.md  shortest_path.rs  trait.md  trait_weighted.md
src/io/: mod.rs  oj_default.rs  oj_interact.rs  oj_line.rs
src/itertools/: bit_perm.rs  permutations.rs
src/math/: README.md  README_prime.md  _matrix_removethis.rs  barrett.md  barrett.rs  bigint.rs  dirichlet_convolution.rs  div_floors.rs  fft.rs  formulae.rs  gcd.rs  harmonic.md  harmonic.rs  mod.rs  modint.rs  modint_1000000007.rs  modint_998244353.rs  nth_root.md  prime_simple.md  prime_sqrt.rs  sqrt_factorization.rs
src/math/prime/: basic_sieve.rs  (+4 more)
src/math_algo/: README.md
src/math_misc/: README.md
src/math_prime/: README.md  simple.md
src/matrix/: char_poly.rs  gauss_elim.rs  mod.rs  square_matrix.rs
src/misc/: binary_search.rs  id_mapper.rs  palindrome.rs  rand.rs
src/number/: mod.rs  modint_1000000007.rs  modint_998244353.rs  ord_f64.rs
src/prime/: basic_prime.rs  basic_sieve.rs  basic_sieve_discard.rs  count_primes.rs  mod.rs  prime.rs  prime_sqrt.rs  segmented_sieve.rs
src/ps_snippets/: lib.rs.html
src/rand/: mod.rs  rand.rs
src/range/: README.md
src/slow/: mod.rs
src/string/: ascii.rs  kmp.rs  mod.rs  rabin_karp.rs  suffix_array.rs
src/test/: barrett_test.rs  div_floors_test.rs  gcd_test.rs  harmonic_test.rs  mod.rs  number_theory_test.rs  prime_test.rs
(+148 files in other folders)
