[package]
name = "ps-snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./katex.html" ]

[dependencies]
io = { path = "crates/io" }

# number
dyadic = { path = "crates/number/dyadic" }
modint = { path = "crates/number/modint" }
ord_f64 = { path = "crates/number/ord_f64" }

# math
gcd = { path = "crates/math/gcd" }
kth_root = { path = "crates/math/kth_root" }

# prime
factorization = { path = "crates/prime/factorization" }
primality = { path = "crates/prime/primality" }

# graph
edge_list = { path = "crates/graph/edge_list" }
## distance
bfs = { path = "crates/graph/bfs" }
dijkstra = { path = "crates/graph/dijkstra" }
## flow & matching
bottleneck_hungarian = { path = "crates/graph/bottleneck_hungarian" }
hungarian = { path = "crates/graph/hungarian" }

# misc
binary_search = { path = "crates/misc/binary_search" }
bit_helper = { path = "crates/misc/bit_helper" }
lis = { path = "crates/misc/lis" }
dnc_opt = { path = "crates/misc/dnc_opt" }

[workspace]
members = []