[package]
name = "ps-snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./katex.html" ]

[dependencies]
io = { path = "crates/io/io" }
io_short = { path = "crates/io/io_short" }

# number
# dyadic = { path = "crates/number/dyadic" } TODO
fraction = { path = "crates/number/fraction" }
modint = { path = "crates/number/modint" }
ord_f64 = { path = "crates/number/ord_f64" }

# math
kth_root = { path = "crates/math/kth_root" }
## number theory
gcd = { path = "crates/math/gcd" }
sieve = { path = "crates/math/sieve" }

# prime
factorization = { path = "crates/prime/factorization" }
primality = { path = "crates/prime/primality" }

# string
ascii = { path = "crates/string/ascii" }

# graph
edge_list = { path = "crates/graph/edge_list" }
## distance
bfs = { path = "crates/graph/bfs" }
bicolor = { path = "crates/graph/bicolor" }
dijkstra = { path = "crates/graph/dijkstra" }
## flow & matching
bottleneck_hungarian = { path = "crates/graph/bottleneck_hungarian" }
hungarian = { path = "crates/graph/hungarian" }

# geometry (simple)
polygon_simple = { path = "crates/geom_simple/polygon_simple" }

# misc
binary_search = { path = "crates/misc/binary_search" }
bit_helper = { path = "crates/misc/bit_helper" }
calendar = { path = "crates/misc/calendar" }
lis = { path = "crates/misc/lis" }
dnc_opt = { path = "crates/misc/dnc_opt" }
## gadgets, only included for docs. do not directly import.
gadgets = { path = "crates/misc/gadgets" }

[workspace]
members = []