[package]
name = "ps-snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./katex.html" ]

[dependencies]
io = { path = "crates/io/io" }
io_short = { path = "crates/io/io_short" }

# number
# dyadic = { path = "crates/number/dyadic" } TODO
fraction = { path = "crates/number/fraction" }
modint = { path = "crates/number/modint" }
modfact = { path = "crates/number/modfact" }
ord_f64 = { path = "crates/number/ord_f64" }

# ds
disjoint_set = { path = "crates/ds/disjoint_set" }
fenwick = { path = "crates/ds/fenwick" }
lazy_segtree = { path = "crates/ds/lazy_segtree" }
lazy_segtree_dyn = { path = "crates/ds/lazy_segtree_dyn" }

# math
kth_root = { path = "crates/math/kth_root" }
modpow = { path = "crates/math/modpow" }
## number theory
gcd = { path = "crates/math/gcd" }
sieve = { path = "crates/math/sieve" }
## combinatorics
enum_comb = { path = "crates/math/enum_comb" }

# prime
factorization = { path = "crates/prime/factorization" }
primality = { path = "crates/prime/primality" }

# string
ascii = { path = "crates/string/ascii" }

# graph
edge_list = { path = "crates/graph/edge_list" }
## distance
bfs = { path = "crates/graph/bfs" }
bicolor = { path = "crates/graph/bicolor" }
dijkstra = { path = "crates/graph/dijkstra" }
## toposort & scc
toposort = { path = "crates/graph/toposort" }
scc = { path = "crates/graph/scc" }
## flow & matching
bottleneck_hungarian = { path = "crates/graph/bottleneck_hungarian" }
hungarian = { path = "crates/graph/hungarian" }
## tree
hld = { path = "crates/graph/tree/hld" }
tree_compress = { path = "crates/graph/tree/compress" }

# geometry (simple)
polygon_simple = { path = "crates/geom_simple/polygon_simple" }

# misc
binary_search = { path = "crates/misc/binary_search" }
bit_helper = { path = "crates/misc/bit_helper" }
calendar = { path = "crates/misc/calendar" }
lis = { path = "crates/misc/lis" }
dnc_opt = { path = "crates/misc/dnc_opt" }
## logic
two_sat = { path = "crates/misc/two_sat" }
## gadgets, only included for docs. do not directly import.
gadgets = { path = "crates/misc/gadgets" }

[workspace]
members = []
