[package]
name = "kth_root"
version = "0.1.0"
edition = "2015"
license = "CC0-1.0"

[dependencies]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow" # use ⚠️ instead
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

nursery = { level = "warn", priority = -1 }
